@@ -283,11 +283,11 @@ ML_file "Isar/outer_syntax.ML";
 ML_file "Thy/thy_output.ML";
 ML_file "Thy/document_antiquotations.ML";
 ML_file "General/graph_display.ML";
-ML_file "Thy/present.ML";
 ML_file "pure_syn.ML";
 ML_file "PIDE/command.ML";
 ML_file "PIDE/query_operation.ML";
 ML_file "PIDE/resources.ML";
+ML_file "Thy/present.ML";
 ML_file "Thy/thy_info.ML";
 ML_file "PIDE/session.ML";
 ML_file "PIDE/protocol_message.ML";
